# neki_lang

./: Cargo.toml  README.md
doc/: regex.txt
res/json/: dirs_config.json  regex_config.json  regex_old.json
src/: lib.rs  main.rs
src/cmd/: generate.rs  init.rs  shared.rs
src/util/: json5.rs  json_patch.rs  patterns.rs
