[package]
name = "neki_lang"
version = "0.1.0"
authors = ["Hambaka"]
description = "A simple tool to generate language template for a Starbound mod called \"Neki\""
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version ="1", features = ["derive"] }
serde_json = { version ="1", features = ["preserve_order"] }
regex = "1"
walkdir = "2"
indexmap = "2"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"